--- a/stylesheets/variables/_fonts.scss
+++ b/stylesheets/variables/_fonts.scss
@@ -1,9 +1,9 @@
 
-$body-font: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-$heading-font: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+$body-font: Karla, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+$heading-font: Lora, "Gentium Basic", Georgia, serif;
 $code-font: Menlo, monaco, Consolas, Lucida Console, monospace;
 
-$font-size-base: 1em;
+$font-size-base: .9em;
 $font-size-ratio: 1.2;
 $font-size-responsive-ratio: 1.167;
 
