--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -1,9 +1,9 @@
 
-$primary-color:   #6e7381; // body text 
+$primary-color:   #444444; // body text 
 
-$secondary-color: #121733; // headings #2a4858
+$secondary-color: #000000; // headings
 
-$accent-color: #5f4bb6; // experimental 
+$accent-color: #ea8664;
 
 $x-color-primary-base:  $primary-color;
 $x-color-primary-dark:  shade( $primary-color, 20% );
@@ -21,10 +21,10 @@ $x-color-accent-light: tint( $accent-color, 20% );
 /*$x-color-shade-black:   #1d1d21;
 $x-color-shade-gray-10: #2e2e31;*/
 $x-color-shade-gray-6:  #91a3b0; // #7b7a7d;
-$x-color-shade-gray-4:  #8b949d;
+$x-color-shade-gray-4:  #e5e5e5;
 /*
 $x-color-shade-gray-3:  #a8b1b8;
-*/$x-color-shade-gray-2:  #e8ecf1; // #e8e8e8
+*/$x-color-shade-gray-2:  #FBE9E2;
 /*$x-color-shade-gray-1:  #e8ecf1;*/
 $x-color-shade-white:   #ffffff;
 
@@ -35,28 +35,8 @@ $x-color-feedback-warning: #ffd137;
 $x-color-words-base:       $x-color-primary-base;
 $x-color-words-subtle:     $x-color-shade-gray-6;
 $x-color-words-heading:    $x-color-secondary-base;
-/*$x-color-words-primary:    $x-color-primary-base;
-$x-color-words-secondary:  $x-color-secondary-base;
-$x-color-words-background: $x-color-shade-white;
-$x-color-words-link:       $x-color-primary-base;
-$x-color-words-hover:      $x-color-primary-dark;*/
 
-$x-color-border-base:             $x-color-shade-gray-2;
-/*$x-color-border-primary:          $x-color-primary-base;
-$x-color-border-form:             $x-color-border-base;*/
+$x-color-border-base:             $x-color-shade-gray-4;
 $x-color-border-form-focus:       $x-color-primary-base;
-/*$x-color-border-form-error:       $x-color-feedback-error;
-$x-color-border-form-bg:          $x-color-shade-white;
-$x-color-border-form-placeholder: $x-color-shade-gray-4;*/
 
 $x-color-background-body:        $x-color-shade-white;
-/*$x-color-background-transparent: transparent;*/
-
-/*$x-color-button-primary-bg:       $x-color-primary-bg;
-$x-color-button-primary-hover:    $x-color-primary-light;
-$x-color-button-primary-active:   $x-color-primary-dark;
-$x-color-button-primary-label:    $x-color-shade-white;
-$x-color-button-secondary-bg:     $x-color-secondary-bg;
-$x-color-button-secondary-hover:  $x-color-secondary-light;
-$x-color-button-secondary-active: $x-color-secondary-dark;
-$x-color-button-secondary-label:  $x-color-shade-white;*/
