--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -129,7 +129,7 @@
 	font-size: $x-font-size-sm;
 	line-height: $x-font-leading-body;
 	letter-spacing: $x-font-letter-spacing;
-	@include rounded( 3px );
+	border-radius: 0;
 	border: 0;
 	cursor: pointer;
 	display: inline-block;
@@ -287,7 +287,6 @@
 .wp-block-pullquote cite {
 	color: $x-color-words-subtle;
 	font-size: $x-font-size-sm;
-	font-family: $x-font-family-heading;
 	padding: $x-space-xxs 0;
 	font-style: normal;
 	text-align: left;
@@ -480,8 +479,9 @@ table.wp-block-table {
 
 	p {	
 		margin: 0; 
-		padding: $x-space-xs $x-space-sm;
-//		font-size: $x-font-size-base;
+		padding: $x-space-xs 0;
+		font-family: $x-font-family-heading;
+		font-size: $x-font-size-md;
 	}
 	
 	&.is-large, &.is-style-large {
@@ -506,7 +506,6 @@ table.wp-block-table {
 		font-family: $x-font-family-heading;
 		font-size: $x-font-size-sm;
 		color: $x-color-words-subtle;
-		padding: 0 $x-space-sm;
 		font-style: normal;
 		font-weight: 500;
 	}
