--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -123,8 +123,8 @@
 		.entry-meta {
 			display: flex;
 			line-height: $x-font-leading-double;
-			flex-direction: column;
-			justify-content: space-between;
+			flex-direction: row;
+			justify-content: center;
 
 			@include media( tablet ) {
 
@@ -138,7 +138,12 @@
 				width: 100%;
 
 				> span {
-					flex: 1 1 20%;
+					margin-right: $x-space-sm;
+					
+					&:after {
+						display: block;
+						contnet: '/';
+					}
 
 					&:last-child {
 						margin-right: 0;
@@ -316,18 +321,16 @@
 	}
 
 	// Single post / page
-	body.single,
-	body.page {
-		.hentry {
-			.entry-title,
-			.entry-meta {
-				text-align: center;
-			}
+	body.single &,
+	body.page & {
 
-			@include media( tablet ) { 
-				font-size: $x-font-size-xxxl;
-				margin: $x-space-lg auto $x-space-md;
-			}
+		.entry-title,
+		.entry-meta {
+			text-align: center;
+		}
+
+		.entry-title {
+			margin: $x-space-lg auto $x-space-md;
 		}
 	}
 
@@ -343,7 +346,7 @@
 		}
 
 		.entry-meta {
-			justify-content: space-between;
+			justify-content: flex-start;
 
 			a {
 				color: $x-color-words-heading;
@@ -361,7 +364,6 @@
 				width: $x-grid-column-7;
 				margin: $x-space-sm auto;
 				flex-direction: column;
-				justify-content: inherit;
 			}
 
 			.posted-on {
@@ -459,13 +461,6 @@
 
 				margin-left: $x-space-column-3;
 				flex: 1 0 60%;
-
-				.entry-meta {
-
-					> span {
-						flex: 1 1 20%;
-					}
-				}
 			}
 		}
 	}
