--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
 /*!
-Theme Name: Business
-Theme URI: https://wordpress.com/themes/business
+Theme Name: Business Elegant
+Theme URI: https://wordpress.com/themes/business-elegant
 Author: Automattic
 Author URI: https://wordpress.com/themes
-Description: A small-business theme for the WordPress Editor.
+Description: An elegant small-business theme for the WordPress Editor.
 Version: 1.0.0-wpcom
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
