Styling for the cover image block, plus some minor tweaks.

--- a/stylesheets/_elements-common.scss
+++ b/stylesheets/_elements-common.scss
@@ -4,9 +4,7 @@ p {
 }
 
 hr {
-	background-color: $x-color-shade-gray-2;
-	border: 0;
-	height: 3px;
+	border-bottom: 3px double $x-color-words-base;
 	margin-bottom: 1.5em;
 }
 
