--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -130,7 +130,7 @@
 	line-height: $x-font-leading-body;
 	letter-spacing: $x-font-letter-spacing;
 	border-radius: 0;
-	border: 0;
+	border: 3px double $x-color-words-base;
 	cursor: pointer;
 	display: inline-block;
 	font-weight: 600;
@@ -228,6 +228,7 @@
 
 .wp-block-cover {
 	width: inherit;
+	background-color: $x-color-shade-gray-2;
 
 	@include media( tablet ) {
 		width: 100%;
@@ -249,6 +250,9 @@
 
 	.wp-block-cover-text,
 	h2 {
+		background: $x-color-shade-white;
+		border: 4px double $x-color-words-base;
+		color: $x-color-words-base;
 		font-weight: 400;
 		padding: $x-space-md;
 		font-family: $x-font-family-heading;
@@ -624,9 +628,6 @@ table.wp-block-table {
 	> a:first-child {
 		color: inherit;
 		box-shadow: none;
-		&:hover {
-			text-decoration: underline;
-		}
 	}
 	
 	&.aligncenter, &.alignfull, &.alignwide {
