--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -597,6 +597,7 @@ table.wp-block-table {
 	width: 100px;
 	
 	&.is-style-wide {
+		border-bottom-width: 3px;
 		width: 100%;
 	}
 
@@ -606,7 +607,7 @@ table.wp-block-table {
 
 		&:before {
 			content: "\00b7 \00b7 \00b7 \00b7 \00b7";
-			color: $x-color-shade-gray-4;
+			color: $x-color-words-base;
 			font-family: $body-font; /* family@include globalvar(font-family, body); */
 			font-size: $x-font-size-lg;
 			letter-spacing: 1em;
