--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -20,7 +20,7 @@ $x-color-accent-light: tint( $accent-color, 20% );
 
 /*$x-color-shade-black:   #1d1d21;
 $x-color-shade-gray-10: #2e2e31;*/
-$x-color-shade-gray-6:  #91a3b0; // #7b7a7d;
+$x-color-shade-gray-6:  #777269;
 $x-color-shade-gray-4:  #e5e5e5;
 /*
 $x-color-shade-gray-3:  #a8b1b8;
