--- a/stylesheets/_elements-common.scss
+++ b/stylesheets/_elements-common.scss
@@ -4,7 +4,7 @@ p {
 }
 
 hr {
-	border-bottom: 4px double $x-color-words-base;
+	border-bottom: 4px double $x-color-border-base;
 	border-top: 0;
 	border-left: 0;
 	border-right: 0;
