--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -24,7 +24,7 @@ $x-color-shade-gray-6:  #777269;
 $x-color-shade-gray-4:  #e5e5e5;
 /*
 $x-color-shade-gray-3:  #a8b1b8;
-*/$x-color-shade-gray-2:  #FBE9E2;
+*/$x-color-shade-gray-2:  #fff4ee;
 /*$x-color-shade-gray-1:  #e8ecf1;*/
 $x-color-shade-white:   #ffffff;
 
